# eMAS-API

./: .gitignore  AGENT_PIPELINE.md  API_CHANGE_RUNBOOK.md  DESIGN-linear.app.md  FRONTEND_FIX_PROGRESS.md  GO_BACKEND_ENGINEERING_RULES.md  GO_BACKEND_FIX_PROGRESS.md  LANGGRAPH_MIGRATION_PHASE_TASKS.md  LANGGRAPH_PHASE0_AUDIT.md  PLAN.md  TRACK.md  UiPlan.md  factory-agent-frontend-integration-plan.md  factory-agent-refined-plan (1).md  frontend-chatbot-implementation (1).md  langgraph_migration_plan.md  pytest.ini  run cmd.txt  skills-lock.json
factory-agent/: .dockerignore  CODE_PRACTICE_RULES.md  FASTAPI_ARCHITECTURE_AUDIT.md  FASTAPI_FIX_PROGRESS.md  FRONTEND_ARCHITECTURE_AUDIT.md  FRONTEND_FIX_PROGRESS.md  FRONTEND_PHASE0_BASELINE.md  database.py  factory_agent.db  fix.py  fix_prompt.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements-embeddings.txt  requirements.txt  tools.md
factory-agent/agent/: ai_domain_config.json  api.py  config.py  events.py  execution.py  guardrails.py  intent.py  intent_verifier.py  permissions.py  plan_validator.py  planner.py  presentation.py  prompting.py  reasoning_pipeline.py  schemas.py  session_manager.py  summary_backend.py  tabular_analysis.py  telemetry.py  tool_intent_profile.py  tool_registry.py  tool_scope.py  tool_selector.py  toolgen.py
factory-agent/factory_agent/: __init__.py  ai_domain_config.json  config.py  events.py  execution.py  execution_runtime.py  memory_manager.py  metrics.py  planner.py  presentation.py  reasoning_pipeline.py  schemas.py  security.py  session_manager.py  telemetry.py  (+9 more)
(+620 files in other folders)
