[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-agent"
version = "0.1.0"
description = "Factory agent API and LangGraph planner"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["factory_agent*"]

[tool.pytest.ini_options]
markers = [
    "legacy_compatibility: tests that intentionally cover non-graph compatibility behavior after LangGraph migration",
]
